[tool.poetry]
name = "nonebot_plugin_smallapi"
version = "0.0.1"
description = "高效，快速的小小API调用插件！"
authors = ["Chaichaisi <chaichaisi@qq.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "nonebot_plugin_smallapi"}]
homepage = "https://github.com/chaichaisi/nonebot_plugin_smallapi"
repository = "https://github.com/chaichaisi/nonebot_plugin_smallapi"
documentation = "https://github.com/chaichaisi/nonebot_plugin_smallapi/blob/master/README.md"

# 添加清华镜像
[[tool.poetry.source]]
name = "tsinghua"
url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple/"
default = true  # 设置清华镜像为默认回调, 以避免 poetry 在某些缺省操作里又回调到 pypi 仓库.

[tool.poetry.dependencies]
python = "^3.9"
nonebot2 = "^2.0.0rc4"
nonebot-adapter-onebot = "^2.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
